Fix game mode scrollbars

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,9 @@ body {
 
 html.game-mode,
 html.game-mode body {
+  position: fixed;
   overflow: hidden;
+  height: 100%;
 }
 
 a {
@@ -43,9 +45,8 @@ a {
 
 button {
   font-family: 'Muoto 205tf', -apple-system, BlinkMacSystemFont, Segoe UI,
-  Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-  sans-serif;
-  
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 
 em {
